# clion-default-setting

./: .gitignore  CMakeLists.txt  README.md  base.h  main.cpp
